--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "main": "index.js",
     "license": "MIT",
     "devDependencies": {
-        "@vuepress/bundler-webpack": "^2.0.0-rc.2",
-        "@vuepress/plugin-shiki": "^2.0.0-rc.0",
+        "@vuepress/bundler-webpack": "2.0.0-rc.7",
+        "@vuepress/plugin-shiki": "2.0.0-rc.0",
         "katex": "^0.16.9",
         "sass-loader": "^14.0.0",
         "vue": "^3.3.4",
-        "vuepress": "^2.0.0-rc.2",
+        "vuepress": "^1.9.10",
         "vuepress-plugin-search-pro": "^2.0.0-rc.16",
-        "vuepress-theme-hope": "^2.0.0-rc.16"
+        "vuepress-theme-hope": "^2.0.0-rc.66"
     },
     "scripts": {
         "dev": "vuepress dev .",
