--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,6 @@
+networkSettings:
+  "https://registry.yarnpkg.com":
+    httpProxy: "socks5://127.0.0.1:20170"
+    httpsProxy: "socks5://127.0.0.1:20170"
+
 yarnPath: .yarn/releases/yarn-4.0.1.cjs
