--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@vuepress/bundler-webpack": "^2.0.0-rc.2",
         "@vuepress/plugin-shiki": "^2.0.0-rc.0",
         "katex": "^0.16.9",
-        "sass-loader": "^14.0.0",
+        "sass-loader": "^16.0.0",
         "vue": "^3.3.4",
         "vuepress": "^2.0.0-rc.2",
         "vuepress-plugin-search-pro": "^2.0.0-rc.16",
@@ -16,5 +16,8 @@
     "scripts": {
         "dev": "vuepress dev .",
         "build": "vuepress build ."
+    },
+    "dependencies": {
+        "sass": "^1.65.1"
     }
 }
