--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -11,23 +11,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
           node-version: 18.x
+
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
+
       - name: Restore Cache
         uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
+
       - name: Install
-        run: yarn install --ignore-engines
+        run: yarn install --mode=skip-build
+
       - name: Build
-        run: yarn build && echo "ejunz.js.org" >./.vuepress/dist/CNAME
+        run: |
+          yarn build
+          echo "ejunz.js.org" > ./.vuepress/dist/CNAME
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
